static/style.css
/* Base */

* {
	box-sizing: border-box;
	user-select: none;
	-ms-user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;
}

html, body {
	height: 100%;
}
body {
	margin: 0;
	font-family: 'Arial';
	overflow-x: hidden;
}
img {
	-webkit-tap-highlight-color: transparent;
}

.full {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
}

#map {
	z-index: 1;
}

/* Overlay - Help */

.btn {
	position: absolute;
	width: 48px;
	height: 48px;
	background-color: white;
	border-radius: 32px;
	box-shadow: 0 0 3px 0px rgba(32,32,32,.6);
	overflow: hidden;
	cursor: pointer;
}

.bounce {
	animation: bounce .5s;
}
.load {
	animation: bounce .5s;
	animation-iteration-count: 999;
}

#btn-help {
	z-index: 4;
	right: 16px;
	top: 16px;
}

#btn-locate {
	z-index: 2;
	bottom: 16px;
	right: 16px;
}

@keyframes bounce {
	25% {
		transform: translateY(-5%);
	}
	50% {
		transform: translateY(3%);
	}
	to {
		transform: translateY(0%);
	}
}

/* Overlay - Help */

#help {
	z-index: 3;
	display: none;
	max-height: 100%;
	padding: 96px 32px;
	background-color: black;
	color: white;
	text-align: center;
	line-height: 36px;
	font-size: 18pt;
	font-weight: bold;
	opacity: .75;
	overflow-x: hidden;
	overflow-y: auto;
}

#help-credits {
	font-size: 18px;
	color: #ddd;
}

/* Overlay - Stop */

#stop {
	z-index: 5;
	display: none;
	background-color: white;
}

#stop-top {
	padding: 8px 12px;
	background-color: deepskyblue;
	box-shadow: 0 0 1px 2px rgba(0,0,0,.3);
	cursor: pointer;
}
#stop-name {
	color: white;
	font-size: 36px;
	font-weight: bold;
}
#stop-desc {
	color: #eee;
	font-size: 24px;
	font-weight: bold;
}

/* Overlay - Stop - Trips */

#stop-trips {
	position: relative;
}
.trip {
	position: absolute;
	width: 100%;
	height: 80px;
	border-bottom: 1px solid rgba(0,0,0,.1);
	color: #555;
	font-size: 36px;
	line-height: 80px;
}

.trip-type, .trip-number {
	position: absolute;
}
.trip-type {
	width: 80px;
	height: 80px;
}
.trip-number {
	left: 84px;
}

.trip-scheduled, .trip-expected {
	position: absolute;
	right: 12px;
	text-align: right;
}
.trip-scheduled {
	top: -16px;
}
.trip-expected {
	right: 13px;
	top: 20px;
	color: #777;
	font-size: 28px;
}

